# RaspiControl

./: .gitignore  ButtonStyle.qml  CMakeLists.txt  RaspiControl.pro  WeatherPage.qml  appres.qrc  main.cpp  main.qml
src/: Background.qml  CameraPage.qml  ForecastDelegate.qml  ForecastDelegateForm.ui.qml  MyLabel.qml  WeatherForecast.qml  WeatherForecastForm.ui.qml  WeatherPage.qml  main.cpp  main.qml  qml.qrc
src/time/: currenttime.cpp  currenttime.h
src/weather/: forecastdatamodell.cpp  forecastdatamodell.h  weather.cpp  weather.h  weatherdata.cpp  weatherdata.h  weatherforecastdata.cpp  weatherforecastdata.h
